# LearnWealth

backend/: .dockerignore  Dockerfile  admin_app.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  start.py  start.sh
backend/agents/: author_agent.py  research_agent.py  syllabus_agent.py  tutor_agent.py
backend/core/: llm.py  security.py
backend/models/: curriculum.py  knowledge_base.py  research.py  user.py
backend/routers/: auth.py  course_content.py  student.py  user.py
backend/services/: auth_service.py  knowledge_service.py  tutor_service.py  user_service.py
learn_app/: App.tsx  README.md  api.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
learn_app/components/: Layout.tsx
learn_app/pages/: CourseExpanded.tsx  Courses.tsx  Home.tsx  Interest.tsx  Learn.tsx  Login.tsx  Register.tsx  UserInfo.tsx
learn_app/services/: geminiService.ts
lesson_maker/: .gitignore  admin_app.py  main.py  pyproject.toml
lesson_maker/agents/: author_agent.py  research_agent.py  syllabus_agent.py  tutor_agent.py
lesson_maker/core/: database.py
lesson_maker/models/: user.py
lesson_maker/routers/: course_content.py  syllabus.py
lesson_maker/tests/: test_db.py
